--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1468,7 +1468,7 @@ section {
   font-size: 50;
   font-weight: 500;
   line-height: 56px;
-  color: #A34425!important;
+  color: #cc765a!important;
   font-family: "monoline signature", Sans-serif;
 }
 
