fix: scroll down

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1881,6 +1881,6 @@ body {
   position: absolute;
   bottom: -200px;
   left: 50%;
-  max-width: 100px;
+  max-width: 100px !important;
   transform: translateX(-50%);
 }
